--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ install:
   - npm install
 script:
   - make
-  - goveralls -service=travis-ci -ignore="internal/handlers/static.go,internal/handlers/tmpls/tmpls.go"
+  - goveralls -service=travis-ci -ignore="internall/handlers/static.go,internall/handlers/tmpls/tmpls.go"
   - make buildDockerImage
-  - 'if [[ "$TRAVIS_PULL_REQUEST" = "false" && "$TRAVIS_BRANCH" = "master" ]]; then docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" && docker push jasonwiguna/golang_url_shortener && docker push jasonwiguna/golang_url_shortener:arm; fi'
+  - 'if [[ "$TRAVIS_PULL_REQUEST" = "false" && "$TRAVIS_BRANCH" = "master" ]]; then docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" && docker push mxschmitt/golang_url_shortener && docker push mxschmitt/golang_url_shortener:arm; fi'
 deploy:
   provider: bintray
-  user: jasonwiguna
+  user: mxschmitt
   file: "build/bintray.json"
   skip_cleanup: true
   key:
